[package]
name = "percent_encoding_lite"
version = "0.1.0"
edition = "2024"

authors = ["Neltharion01"]
license = "MIT OR Apache-2.0"
description = "URL percent-encoding"
readme = "README.md"
repository = "https://github.com/Neltharion01/percent_encode_lite"
keywords = ["urlencode"]

[dependencies]
